# hotel_booking

./: .env-example  .gitignore  Dockerfile  Dockerfile.nginx  Makefile  README.md  docker-compose.yml  grafana-dashboard.json  nginx.conf  pyproject.toml
app/: config.py  database.py  email_templates.py  exceptions.py  logger.py  main.py
app/admin/: auth.py  views.py
app/bookings/: dao.py  models.py  router.py  schemas.py
app/dao/: base.py
app/hotels/: dao.py  models.py  router.py  schemas.py
app/hotels/rooms/: dao.py  models.py  router.py  schemas.py
app/images/: router.py
app/migrations/: env.py
app/migrations/versions/: 14a1c8d76b30_initial_migration.py  abe81309b5fb_update_models.py  b56b4262b583_add_booking_rooms_and_users_models.py  e162dd503850_add_booking_rooms_and_users_models.py  f1e0fdd90261_update_rooms_model.py
app/pages/: router.py
app/tasks/: celery_app.py  scheduled.py  tasks.py
app/templates/: hotels.html
app/templates/emails/: booking_confirmation.html  booking_reminder_one_day_before_checkin.html  booking_reminder_three_days_before_checkin.html
app/tests/: conftest.py
app/tests/fixtures/: mock_bookings.json  mock_users.json
app/tests/integration_tests/bookings_tests/: test_api.py  test_dao.py
app/tests/integration_tests/users_tests/: test_api.py
app/tests/unit_tests/users_tests/: test_dao.py
app/users/: auth.py  consts.py  dao.py  dependencies.py  models.py  router.py  schemas.py
